codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1208
expression: terminal.backend()
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ this is a test reason such as one that would be produced by the model        │"
"│                                                                              │"
"│ $ echo hello world                                                           │"
"│                                                                              │"
"│ Would you like to run the following command?                                 │"
"│                                                                              │"
"│   › 1. Approve and run now          (Y) Run this command one time            │"
"│     2. Always approve this session  (A) Automatically approve this command   │"
"│                                     for the rest of the session              │"
"│     3. Cancel                       (N) Do not run the command               │"
"│ Press Enter to continue                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
