codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1227
expression: terminal.backend()
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ $ echo hello world                                                           │"
"│                                                                              │"
"│ Would you like to run the following command?                                 │"
"│                                                                              │"
"│ › 1. Approve and run now          (Y) Run this command one time              │"
"│   2. Always approve this session  (A) Automatically approve this command for │"
"│                                   the rest of the session                    │"
"│   3. Cancel                       (N) Do not run the command                 │"
"│                                                                              │"
"│ Press Enter to continue                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
