codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 1262
expression: terminal.backend()
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ The model wants to apply changes                                             │"
"│                                                                              │"
"│ Grant write access to /tmp for the remainder of this session.                │"
"│                                                                              │"
"│ Would you like to apply these changes?                                       │"
"│                                                                              │"
"│ › 1. Approve  (Y) Apply the proposed changes                                 │"
"│   2. Cancel   (N) Do not apply the changes                                   │"
"│                                                                              │"
"│ Press Enter to continue                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
