codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"  Analyzing (0s • Esc to interrupt)                                             "
"                                                                                "
"▌ Ask Codex to do anything                                                      "
"                                                                                "
"? for shortcuts                                                                 "
"                                                                                "
