codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_and_approval_modal.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"this is a test reason such as one that would be produced by the model           "
"                                                                                "
"▌Allow command?                                                                 "
"▌> 1. Yes                                                                       "
"▌  2. Always                                                                    "
"▌  3. No, provide feedback                                                      "
"▌                                                                               "
"▌ Approve and run the command                                                   "
"                                                                                "
